feat: add fetching code

--- a/project/.vscode/tasks.json
+++ b/project/.vscode/tasks.json
@@ -1,12 +1,12 @@
 {
     "tasks": [
         {
-            "type": "cppbuild",
+            "type": "shell",
             "label": "C/C++: clang++ build active file",
             "command": "make",
             "args": [],
             "options": {
-                "cwd": "${fileDirname}"
+                "cwd": "${workspaceFolder}"
             },
             "problemMatcher": [
                 "$gcc"
