--- a/project/.vscode/launch.json
+++ b/project/.vscode/launch.json
@@ -5,19 +5,25 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "clang++ - Build and debug active file",
+            "name": "debug main",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
+            "program": "${workspaceFolder}/main",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${fileDirname}",
+            "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
-            "MIMode": "gdb",
-            "miDebuggerPath": "/usr/local/bin/gdb",
-            "preLaunchTask": "C/C++: clang++ build active file"
-            
+            "MIMode": "lldb",
+            // "miDebuggerPath": "/usr/local/bin/gdb",
+            "preLaunchTask": "C/C++: clang++ build active file",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
         }
     ]
 }
