feat: add res_station

--- a/project/Makefile
+++ b/project/Makefile
@@ -1,7 +1,10 @@
 
 CC=g++
 CFLAGS=-std=c++11 -c -Wall -pedantic -g
-OBJS=main.o components/fetch.o components/decoder.o structures/instruction.o structures/ins_table.o 
+OBJS= \
+main.o \
+components/fetch.o components/decoder.o components/ins_table.o components/res_station.o \
+structures/instruction.o  structures/res_record.o
 
 default: $(OBJS)
 	$(CC) -o main $(OBJS)
