--- a/project/Makefile
+++ b/project/Makefile
@@ -4,7 +4,7 @@ CFLAGS=-std=c++11 -c -Wall -pedantic -g
 OBJS= \
 main.o \
 components/fetch.o components/decoder.o components/ins_table.o components/res_station.o \
-structures/instruction.o  structures/res_record.o \
+structures/instruction.o  structures/res_record.o structures/back_writer.o components/CDB.o \
 
 default: $(OBJS)
 	$(CC) -o main $(OBJS)
