feat: check dependencies through ROB, add ROB, CDB

--- a/project/.vscode/settings.json
+++ b/project/.vscode/settings.json
@@ -68,6 +68,7 @@
         "unordered_map": "cpp",
         "utility": "cpp",
         "vector": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "__availability": "cpp"
     }
 }
