feat: add main parameters, add free operand in decoder

--- a/project/.vscode/launch.json
+++ b/project/.vscode/launch.json
@@ -9,7 +9,13 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/main",
-            "args": [],
+            "args": [
+                "1",
+                "1",
+                "1",
+                "1",
+                "test_files/ins2.dat",
+            ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
