--- a/project/.vscode/settings.json
+++ b/project/.vscode/settings.json
@@ -69,6 +69,7 @@
         "utility": "cpp",
         "vector": "cpp",
         "queue": "cpp",
-        "__availability": "cpp"
+        "__availability": "cpp",
+        "set": "cpp"
     }
 }
