--- a/project/Makefile
+++ b/project/Makefile
@@ -3,9 +3,9 @@ CC=g++
 CFLAGS=-std=c++14 -c -Wall -pedantic -g
 OBJS= \
 main.o \
-fetch.o \
 structures/instruction.o \
 structures/res_record.o \
+components/fetch.o \
 components/decoder.o \
 components/ins_table.o \
 components/res_station.o \
